<resources>
    <string name="app_name">Profile Task</string>
    <string name="title_view">Edit Profile</string>
    <string name="todo">TODO</string>
    <string name="name">Name</string>
    <string name="name_data">yousef mahmoud dewidar</string>
    <string name="email">Email</string>
    <string name="email_data">ymahmoud1213@gmail.com</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="date_data">20/10/2003</string>
    <string name="button_save">Save Changes</string>
    <string name="password_data">**************</string>
    <string name="password">Password</string>

</resources>